<resources>
    <string name="app_name">SocialApp</string>

    <string name="menu_profileText">Profil</string>
    <string name="menu_homeText">Ana Sayfa</string>

    <string name="recyclerview_nameLabel">Ad - Soyad:</string>
    <string name="recyclerview_name">Social App</string>

    <string name="recyclerview_emailLabel">E-mail:</string>
    <string name="recyclerview_email">socialapp@example.com</string>

    <string name="LoginText">Login Test Text</string>
    <string name="LoginEmailHint">E-mail adresinizi giriniz..</string>
    <string name="LoginPasswordHint">Şifrenizi Giriniz..</string>
    <string name="LoginButton">Giriş Yap</string>

    <string name="ProfileDummyName">Oliver Dummy</string>
    <string name="ProfileDummyEmail">oliverdummy@example.com</string>
    <string name="MainMenuAddFriendContent">Arkadaş Ekle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ProfileRemoveFriendContent">Arkadaşlıktan Çıkar</string>
    <string name="SettingsEmailLabelText">E-mail adresi</string>
    <string name="SettingsEmailHintText">E-mail Adresi</string>
    <string name="SettingsFirstNameLabelText">İsim</string>
    <string name="SettingsFirstNameHintText">İsim</string>
    <string name="SettingsLastNameLabelText">Soyisim</string>
    <string name="SettingsLastNameHintText">Soyisim</string>
    <string name="settingsFragmentProfilePhotoText">Profil fotoğrafı değiştirmek için tıkla!</string>
    <string name="settingsFragmentFieldText">Aşağıdaki alanları doldurunuz.</string>
</resources>