<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/recyclerview_nameLabel"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toEndOf="@+id/profilePhoto"
        app:layout_constraintTop_toTopOf="@+id/profilePhoto"
        app:layout_constraintWidth_percent="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/recyclerview_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/profilePhoto" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/emailLabel"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/recyclerview_emailLabel"
        app:layout_constraintBottom_toBottomOf="@+id/profilePhoto"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/profilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        app:layout_constraintWidth_percent="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:text="@string/recyclerview_email"
        app:layout_constraintBottom_toBottomOf="@+id/emailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailLabel"
        app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>