<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="2dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"

        android:theme="@style/SocialAppSplash"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0sp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardViewConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePhoto"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.15" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/SocialAppSplash.h4"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:text="@string/recyclerview_nameLabel"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@+id/profilePhoto"
                app:layout_constraintTop_toTopOf="@+id/profilePhoto"
                app:layout_constraintWidth_percent="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/SocialAppSplash.span"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/recyclerview_name"
                app:autoSizeMaxTextSize="32sp"
                app:autoSizeMinTextSize="8sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toStartOf="@+id/friendButton"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toTopOf="@+id/profilePhoto"
                app:layout_constraintWidth_percent="0.352" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/SocialAppSplash.h4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:text="@string/recyclerview_emailLabel"
                app:layout_constraintBottom_toBottomOf="@+id/profilePhoto"
                app:layout_constraintEnd_toStartOf="@+id/email"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toEndOf="@+id/profilePhoto"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel"
                app:layout_constraintWidth_percent="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/SocialAppSplash.span"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:text="@string/recyclerview_email"
                app:autoSizeMaxTextSize="32sp"

                app:autoSizeMinTextSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/profilePhoto"
                app:layout_constraintEnd_toStartOf="@+id/friendButton"
                app:layout_constraintHeight_percent="0.24"
                app:layout_constraintStart_toEndOf="@+id/emailLabel"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintWidth_percent="0.352" />

            <ImageButton
                android:id="@+id/friendButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/MainMenuAddFriendContent"
                android:scaleType="center"
                android:src="@drawable/add_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.14" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>